--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "frontail",
-    "version": "0.2.9",
+    "version": "0.2.10",
     "description": "tail -F output in browser",
     "homepage": "https://github.com/mthenw/frontail",
     "author": {
@@ -13,9 +13,9 @@
     },
     "dependencies": {
         "commander": "1.0.1",
-        "socket.io": "0.9.6",
+        "socket.io": "0.9.10",
         "daemon": "0.5.1",
-        "connect": "2.2.1"
+        "connect": "2.4.6"
     },
     "repository": {
         "type": "git",
@@ -26,7 +26,7 @@
         "syslog"
     ],
     "engine": {
-        "node": ">= 0.4.x"
+        "node": ">= 0.5.0"
     },
     "preferGlobal": true
 }
