Sanitize log data

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "commander": "1.0.1",
         "socket.io": "0.9.10",
         "daemon": "0.4.1",
-        "connect": "2.4.4"
+        "connect": "2.4.4",
+        "validator": "0.4.24"
     },
     "repository": {
         "type": "git",
