--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
         "daemon": "1.1.0",
         "cookie": "0.1.0"
     },
+    "devDependencies": {
+        "jshint": "~2.1.10"
+    },
     "repository": {
         "type": "git",
         "url": "http://github.com/mthenw/frontail.git"
