--- a/.jshintrc
+++ b/.jshintrc
@@ -25,6 +25,8 @@
     "globals": {
         "io": false,
         "describe": false,
-        "it": false
+        "it": false,
+        "beforeEach": false,
+        "afterEach": false
     }
 }
