--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontail",
   "version": "1.1.0",
-  "description": "tail -F output in browser",
+  "description": "realtime log stream in the browser",
   "homepage": "https://github.com/mthenw/frontail",
   "author": "Maciej Winnicki <maciej.winnicki@gmail.com>",
   "license": "MIT",
@@ -29,7 +29,10 @@
   },
   "keywords": [
     "tail",
-    "syslog"
+    "syslog",
+    "realtime",
+    "log",
+    "devops"
   ],
   "engine": {
     "node": ">= 0.8.0"
