--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "supertest": "~0.8.1",
     "jsdom": "~0.10.1"
   },
+  "scripts": {
+    "lint": "./node_modules/.bin/jshint .",
+    "test": "./node_modules/.bin/mocha --reporter spec test/*.js"
+  },
   "repository": {
     "type": "git",
     "url": "http://github.com/mthenw/frontail.git"
