--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   },
   "devDependencies": {
     "jscs": "^1.6.2",
-    "jsdom": "~0.10.1",
+    "jsdom": "^3.1.0",
     "jshint": "~2.3.0",
-    "mocha": "~1.13.0",
+    "mocha": "~2.2.0",
     "should": "~3.3.2",
     "sinon": "~1.7.3",
     "supertest": "~0.8.1",
