--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontail",
-  "version": "3.1.2",
+  "version": "4.0.0",
   "description": "streaming logs to the browser",
   "homepage": "https://github.com/mthenw/frontail",
   "author": "Maciej Winnicki <maciej.winnicki@gmail.com>",
@@ -15,7 +15,9 @@
     "socket.io": "1.4.8"
   },
   "devDependencies": {
-    "eslint": "^3.4.0",
+    "eslint": "^3.6.0",
+    "eslint-config-airbnb-base": "^8.0.0",
+    "eslint-plugin-import": "^1.16.0",
     "jsdom": "^8.5.0",
     "mocha": "~2.3.2",
     "should": "~3.3.2",
@@ -25,7 +27,7 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "test": "mocha --reporter spec test/*.js"
+    "test": "mocha -r should --reporter spec test/*.js"
   },
   "repository": {
     "type": "git",
