--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "commander": "1.3.2",
     "connect": "2.11.0",
     "cookie": "0.1.0",
-    "daemon": "1.1.0",
+    "daemon": "github:zipang/daemon.node#48d0977c26fb3a6a44ae99aae3471b9d5a761085",
     "socket.io": "1.4.8"
   },
   "devDependencies": {
@@ -33,13 +33,7 @@
     "type": "git",
     "url": "http://github.com/mthenw/frontail.git"
   },
-  "keywords": [
-    "tail",
-    "syslog",
-    "realtime",
-    "log",
-    "devops"
-  ],
+  "keywords": ["tail", "syslog", "realtime", "log", "devops"],
   "main": "index",
   "preferGlobal": true
 }
