--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontail",
-  "version": "4.0.2",
+  "version": "4.0.3",
   "description": "streaming logs to the browser",
   "homepage": "https://github.com/mthenw/frontail",
   "author": "Maciej Winnicki <maciej.winnicki@gmail.com>",
@@ -34,13 +34,7 @@
     "type": "git",
     "url": "http://github.com/mthenw/frontail.git"
   },
-  "keywords": [
-    "tail",
-    "syslog",
-    "realtime",
-    "log",
-    "devops"
-  ],
+  "keywords": ["tail", "syslog", "realtime", "log", "devops"],
   "main": "index",
   "preferGlobal": true
 }
