--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "connect": "2.11.0",
     "cookie": "0.1.0",
     "daemon": "github:zipang/daemon.node#48d0977c26fb3a6a44ae99aae3471b9d5a761085",
-    "socket.io": "1.4.8"
+    "socket.io": "1.4.8",
+    "untildify": "^3.0.2"
   },
   "devDependencies": {
     "eslint": "^3.6.0",
     "eslint-config-airbnb-base": "^8.0.0",
     "eslint-plugin-import": "^1.16.0",
-    "jsdom": "^8.5.0",
+    "jsdom": "^9.12.0",
     "mocha": "~2.3.2",
     "should": "~3.3.2",
     "sinon": "~1.7.3",
@@ -28,13 +29,32 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "test": "mocha -r should --reporter spec test/*.js"
+    "test": "mocha -r should --reporter spec test/*.js",
+    "pkg": "pkg --out-path=dist ."
+  },
+  "pkg": {
+    "assets": [
+      "preset/*.json",
+      "web/**/*"
+    ],
+    "targets": [
+      "node8-alpine-x64",
+      "node8-linux-x64",
+      "node8-macos-x64",
+      "node8-win-x64"
+    ]
   },
   "repository": {
     "type": "git",
     "url": "http://github.com/mthenw/frontail.git"
   },
-  "keywords": ["tail", "syslog", "realtime", "log", "devops"],
+  "keywords": [
+    "tail",
+    "syslog",
+    "realtime",
+    "log",
+    "devops"
+  ],
   "main": "index",
   "preferGlobal": true
 }
