Add infor about not running on Windows

--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
     "targets": [
       "node8-alpine-x64",
       "node8-linux-x64",
-      "node8-macos-x64",
-      "node8-win-x64"
+      "node8-macos-x64"
     ]
   },
   "repository": {
