--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
   "bin": "./bin/frontail",
   "dependencies": {
     "CBuffer": "0.1.4",
+    "basic-auth-connect": "^1.0.0",
     "byline": "^5.0.0",
     "commander": "1.3.2",
-    "connect": "2.30.2",
+    "connect": "3.6.6",
     "cookie": "0.1.0",
+    "cookie-parser": "^1.4.3",
     "daemon-fix41": "1.1.2",
+    "express-session": "^1.15.6",
+    "serve-static": "^1.13.2",
     "socket.io": "^1.7.0",
     "untildify": "^3.0.2"
   },
