--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
     "basic-auth-connect": "^1.0.0",
     "byline": "^5.0.0",
     "commander": "1.3.2",
+    "configstore": "^4.0.0",
     "connect": "3.6.6",
     "cookie": "0.1.0",
     "cookie-parser": "^1.4.3",
     "daemon-fix41": "1.1.2",
     "express-session": "^1.15.6",
+    "is-docker": "^1.1.0",
     "serve-static": "^1.13.2",
     "socket.io": "^1.7.0",
-    "untildify": "^3.0.2"
+    "universal-analytics": "^0.4.20",
+    "untildify": "^3.0.2",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "eslint": "^5.6.1",
