--- a/package.json
+++ b/package.json
@@ -7,30 +7,30 @@
   "license": "MIT",
   "bin": "./bin/frontail",
   "dependencies": {
-    "CBuffer": "0.1.4",
-    "basic-auth-connect": "^1.0.0",
-    "byline": "^5.0.0",
-    "commander": "1.3.2",
-    "configstore": "^4.0.0",
-    "connect": "3.6.6",
-    "cookie": "0.1.0",
-    "cookie-parser": "^1.4.3",
-    "daemon-fix41": "1.1.2",
-    "express-session": "^1.15.6",
-    "is-docker": "^1.1.0",
-    "serve-static": "^1.13.2",
-    "socket.io": "^1.7.0",
-    "universal-analytics": "^0.4.20",
-    "untildify": "^3.0.2",
-    "uuid": "^3.3.2"
+    "CBuffer": "~0.1.4",
+    "basic-auth-connect": "~1.0.0",
+    "byline": "~5.0.0",
+    "commander": "~1.3.2",
+    "configstore": "~4.0.0",
+    "connect": "~3.6.6",
+    "cookie": "~0.1.0",
+    "cookie-parser": "~1.4.3",
+    "daemon-fix41": "~1.1.2",
+    "express-session": "~1.15.6",
+    "is-docker": "~1.1.0",
+    "serve-static": "~1.13.2",
+    "socket.io": "~1.7.0",
+    "universal-analytics": "~0.4.20",
+    "untildify": "~3.0.2",
+    "uuid": "~3.3.2"
   },
   "devDependencies": {
-    "eslint": "^5.6.1",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "jsdom": "^11.11.0",
-    "mocha": "^2.3.2",
-    "pkg": "^4.3.3",
+    "eslint": "~5.6.1",
+    "eslint-config-airbnb-base": "~13.1.0",
+    "eslint-plugin-import": "~2.14.0",
+    "jsdom": "~11.11.0",
+    "mocha": "~5.2.0",
+    "pkg": "~4.3.3",
     "should": "~3.3.2",
     "sinon": "~1.7.3",
     "supertest": "~0.8.1",
@@ -38,7 +38,7 @@
   },
   "scripts": {
     "lint": "eslint .",
-    "test": "mocha -r should --reporter spec test/*.js",
+    "test": "mocha -r should --exit test/*.js",
     "pkg": "pkg --out-path=dist ."
   },
   "pkg": {
