--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "express-session": "~1.15.6",
     "is-docker": "~1.1.0",
     "serve-static": "~1.13.2",
-    "socket.io": "~1.7.0",
+    "socket.io": "^2.2.0",
     "universal-analytics": "~0.4.20",
     "untildify": "~3.0.2",
     "uuid": "~3.3.2"
@@ -28,12 +28,12 @@
     "eslint": "~5.6.1",
     "eslint-config-airbnb-base": "~13.1.0",
     "eslint-plugin-import": "~2.14.0",
-    "jsdom": "~11.11.0",
+    "jsdom": "~11.12.0",
     "mocha": "~5.2.0",
     "pkg": "~4.3.3",
     "should": "~3.3.2",
     "sinon": "~1.7.3",
-    "supertest": "~0.8.1",
+    "supertest": "^3.3.0",
     "temp": "~0.8.1"
   },
   "scripts": {
