fix: replace native tail with fs-tail-stream fixes #111

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "~1.4.3",
     "daemon-fix41": "~1.1.2",
     "express-session": "~1.15.6",
+    "fs-tail-stream": "^1.1.0",
     "is-docker": "~1.1.0",
     "serve-static": "~1.13.2",
     "socket.io": "^2.2.0",
