--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "CBuffer": "~0.1.4",
     "basic-auth-connect": "~1.0.0",
     "byline": "~5.0.0",
+    "command-exists": "^1.2.8",
     "commander": "~3.0.1",
     "configstore": "~4.0.0",
     "connect": "~3.6.6",
