--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "CBuffer": "~0.1.4",
     "basic-auth-connect": "~1.0.0",
     "byline": "~5.0.0",
+    "command-exists": "^1.2.8",
     "commander": "~3.0.1",
     "configstore": "~4.0.0",
     "connect": "~3.6.6",
@@ -17,6 +18,7 @@
     "cookie-parser": "~1.4.3",
     "daemon-fix41": "~1.1.2",
     "express-session": "~1.15.6",
+    "fs-tail-stream": "^1.1.0",
     "is-docker": "~1.1.0",
     "serve-static": "~1.13.2",
     "socket.io": "^2.2.0",
