--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -13,7 +13,7 @@ jobs:
     - run: npm install
     - run: npm test
     - run: npm run lint
-    - run: npm publish
+    - run: npm publish --access public
       if: startsWith(github.event.ref, 'refs/tags')
       env:
         NODE_AUTH_TOKEN: ${{secrets.npm_token}}
