--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -13,7 +13,9 @@ jobs:
     - run: npm install
     - run: npm test
     - run: npm run lint
-    - run: npm publish --access public
+    - run: |
+        echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_AUTH_TOKEN }}" > ~/.npmrc
+        npm publish
       if: startsWith(github.event.ref, 'refs/tags')
       env:
         NODE_AUTH_TOKEN: ${{secrets.npm_token}}
