--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "eslint": "~6.8.0",
     "eslint-config-airbnb-base": "~14.0.0",
+    "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-import": "~2.20.0",
     "jsdom": "~11.12.0",
     "mocha": "~5.2.0",
@@ -55,17 +56,14 @@
     ]
   },
   "eslintConfig": {
-    "extends": "airbnb-base",
+    "extends": [
+      "airbnb-base",
+      "prettier"
+    ],
     "rules": {
       "no-console": "off",
       "strict": "off",
-      "implicit-arrow-linebreak": "off",
-      "comma-dangle": [
-        "error",
-        {
-          "functions": "never"
-        }
-      ]
+      "implicit-arrow-linebreak": "off"
     },
     "env": {
       "node": true
