chore: use explicit modules versions

--- a/package.json
+++ b/package.json
@@ -7,24 +7,24 @@
   "license": "MIT",
   "bin": "./bin/frontail",
   "dependencies": {
-    "CBuffer": "~0.1.4",
-    "basic-auth-connect": "~1.0.0",
-    "byline": "~5.0.0",
-    "command-exists": "^1.2.8",
-    "commander": "~3.0.1",
-    "configstore": "~4.0.0",
-    "connect": "~3.6.6",
-    "cookie": "~0.1.0",
-    "cookie-parser": "~1.4.3",
-    "daemon-fix41": "~1.1.2",
-    "express-session": "~1.15.6",
-    "fs-tail-stream": "^1.1.0",
-    "is-docker": "~1.1.0",
-    "serve-static": "~1.13.2",
-    "socket.io": "^2.2.0",
-    "universal-analytics": "~0.4.20",
-    "untildify": "~3.0.2",
-    "uuid": "~3.3.2"
+    "CBuffer": "0.1.4",
+    "basic-auth-connect": "1.0.0",
+    "byline": "5.0.0",
+    "command-exists": "1.2.8",
+    "commander": "3.0.1",
+    "configstore": "4.0.0",
+    "connect": "3.7.0",
+    "cookie": "0.1.0",
+    "cookie-parser": "1.4.5",
+    "daemon-fix41": "1.1.2",
+    "express-session": "1.15.6",
+    "fs-tail-stream": "1.1.0",
+    "is-docker": "1.1.0",
+    "serve-static": "1.14.1",
+    "socket.io": "2.3.0",
+    "universal-analytics": "0.4.23",
+    "untildify": "3.0.2",
+    "uuid": "3.3.2"
   },
   "devDependencies": {
     "eslint": "~6.8.0",
