--- a/package.json
+++ b/package.json
@@ -7,37 +7,37 @@
   "license": "MIT",
   "bin": "./bin/frontail",
   "dependencies": {
-    "CBuffer": "0.1.4",
     "basic-auth-connect": "1.0.0",
     "byline": "5.0.0",
-    "command-exists": "1.2.8",
-    "commander": "3.0.1",
-    "configstore": "4.0.0",
+    "CBuffer": "2.2.0",
+    "command-exists": "1.2.9",
+    "commander": "7.1.0",
+    "configstore": "5.0.1",
     "connect": "3.7.0",
-    "cookie": "0.1.0",
+    "cookie": "0.4.1",
     "cookie-parser": "1.4.5",
-    "daemon-fix41": "1.1.2",
-    "express-session": "1.15.6",
+    "daemonize-process": "~3.0.0",
+    "express-session": "1.17.1",
     "fs-tail-stream": "1.1.0",
-    "is-docker": "1.1.0",
+    "is-docker": "2.1.1",
     "serve-static": "1.14.1",
-    "socket.io": "2.3.0",
+    "socket.io": "3.1.1",
     "universal-analytics": "0.4.23",
-    "untildify": "3.0.2",
-    "uuid": "3.3.2"
+    "untildify": "4.0.0",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
-    "eslint": "~6.8.0",
-    "eslint-config-airbnb-base": "~14.0.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-import": "~2.20.0",
-    "jsdom": "~11.12.0",
-    "mocha": "~5.2.0",
-    "pkg": "~4.4.7",
-    "should": "~3.3.2",
-    "sinon": "~1.7.3",
-    "supertest": "^3.3.0",
-    "temp": "~0.8.1"
+    "eslint": "~7.20.0",
+    "eslint-config-airbnb-base": "~14.2.1",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-import": "~2.22.1",
+    "jsdom": "~16.4.0",
+    "mocha": "~8.3.0",
+    "pkg": "~4.4.9",
+    "should": "~13.2.3",
+    "sinon": "~9.2.4",
+    "supertest": "^6.1.3",
+    "temp": "~0.9.4"
   },
   "scripts": {
     "lint": "eslint .",
@@ -50,9 +50,9 @@
       "web/**/*"
     ],
     "targets": [
-      "node8-alpine-x64",
-      "node8-linux-x64",
-      "node8-macos-x64"
+      "node12-alpine-x64",
+      "node12-linux-x64",
+      "node12-macos-x64"
     ]
   },
   "eslintConfig": {
@@ -70,7 +70,8 @@
     },
     "ignorePatterns": [
       "web/assets/tinycon.min.js",
-      "web/assets/ansi_up.js"
+      "web/assets/ansi_up.js",
+      "web/assets/darkmode/theme.js"
     ]
   },
   "prettier": {
